--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,7 +13,7 @@ bucket = "./public"
 entry-point = "."
 
 [build]
-command = "npm run build:worker"
+command = "npm run build"
 watch_dir = "build"
 
 [build.upload]
